fixed ability to user 1 long string to break the tweet container

--- a/public/styles/tweet.scss
+++ b/public/styles/tweet.scss
@@ -80,11 +80,13 @@ footer.tweet {
     }
 }
 .tweet { 
+
+    word-wrap: break-word;
+    
     .interactOptions {
         position: relative;
         bottom: 15px;
         float: right;
-        
         opacity: 0;
         width: 90px; 
         height: 40px;
